Refactoring and change session format